get bmc
